Tri cap nhat them chuc nang Search form QuanLyDanCu va QuanLyFeedBack

--- a/QuanLyPhongTro/QuanLyPhongTro.csproj
+++ b/QuanLyPhongTro/QuanLyPhongTro.csproj
@@ -164,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\account_icon.png" />
+    <None Include="Images\RefeshIcon.png" />
     <None Include="Images\FeedbackIcon.png" />
     <None Include="Images\ChungCu.png" />
   </ItemGroup>
