--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DanKyTaiKhoanKH_BLL.cs" />
     <Compile Include="FeedBackBLL.cs" />
+    <Compile Include="QuanLyDichVuBLL.cs" />
+    <Compile Include="TaoQuanLyPhongBLL.cs" />
     <Compile Include="ThongTinPhongBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThongTinKhachBLL.cs" />
