--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DanKyTaiKhoanKH_DAL.cs" />
     <Compile Include="FeedBackDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLyDichVuDAL.cs" />
+    <Compile Include="TaoQuanLyPhongDAL.cs" />
     <Compile Include="ThongTinKhachDAL.cs" />
     <Compile Include="ThongTinPhongDAL.cs" />
   </ItemGroup>
