--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,9 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DanKyTaiKhoanKH_DTO.cs" />
     <Compile Include="FeedBackDTO.cs" />
+    <Compile Include="TaoQuanLyPhongDTO.cs" />
+    <Compile Include="ThongTinDichVuDTO.cs" />
     <Compile Include="ThongTinKhachDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThongTinPhongDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
