Cap nhat Appcongig dung chung connection string

--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+	<connectionStrings>
+		<add name="QuanLyPhongTro" connectionString="Data Source=TRIS72\VANTRI;Initial Catalog=QuanLyPhongTro;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
