--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,8 +47,10 @@
   <ItemGroup>
     <Compile Include="DanKyTaiKhoanKH_BLL.cs" />
     <Compile Include="FeedBackBLL.cs" />
+    <Compile Include="KhuVucBLL.cs" />
     <Compile Include="QuanLyDichVuBLL.cs" />
     <Compile Include="TaoQuanLyPhongBLL.cs" />
+    <Compile Include="ThongTinAdminBLL.cs" />
     <Compile Include="ThongTinPhongBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThongTinKhachBLL.cs" />
