--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="DangNhapAdminDTO.cs" />
     <Compile Include="DanKyTaiKhoanKH_DTO.cs" />
+    <Compile Include="DichVuPhongDTO.cs" />
     <Compile Include="FeedBackDTO.cs" />
     <Compile Include="KhuVucDTO.cs" />
     <Compile Include="TaoQuanLyPhongDTO.cs" />
