--- a/QuanLyPhongTro/packages.config
+++ b/QuanLyPhongTro/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net48" />
+  <package id="System.Configuration.Abstractions" version="2.0.2.45" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
 </packages>
