--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -50,7 +50,9 @@
     <Compile Include="FeedBackBLL.cs" />
     <Compile Include="KhuVucBLL.cs" />
     <Compile Include="QuanLyDichVuBLL.cs" />
+    <Compile Include="QuanLyPhieuThuBLL.cs" />
     <Compile Include="TaoQuanLyPhongBLL.cs" />
+    <Compile Include="ThongKeBLL.cs" />
     <Compile Include="ThongTinAdminBLL.cs" />
     <Compile Include="ThongTinPhongBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
