Update các form giao diện 17/10/2024

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="FeedBackDAL.cs" />
     <Compile Include="KhuVucDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLiPhongDAL.cs" />
     <Compile Include="QuanLyDichVuDAL.cs" />
     <Compile Include="TaoQuanLyPhongDAL.cs" />
     <Compile Include="ThongTinAdminDAL.cs" />
