--- a/QuanLyPhongTro/QuanLyPhongTro.csproj
+++ b/QuanLyPhongTro/QuanLyPhongTro.csproj
@@ -154,6 +154,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLyChungCuKV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLyChungCuKV.Designer.cs">
+      <DependentUpon>QuanLyChungCuKV.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TaiKhoanDangNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TaiKhoanDangNhap.Designer.cs">
+      <DependentUpon>TaiKhoanDangNhap.cs</DependentUpon>
+    </Compile>
     <Compile Include="TaoCT01.cs" />
     <Compile Include="WordExport.cs" />
     <Compile Include="XuLyAnh.cs" />
@@ -215,6 +227,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QuanLyChungCuKV.resx">
+      <DependentUpon>QuanLyChungCuKV.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TaiKhoanDangNhap.resx">
+      <DependentUpon>TaiKhoanDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
