--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
-    </startup>
-<connectionStrings>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+	</startup>
+	<connectionStrings>
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=DESKTOP-OJ39RBQ;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
+		<add name="QuanLyPhongTro" connectionString="Data Source=DOHHY\SQLEXPRESS01;Initial Catalog=QL_ChungCu_29_10_2024_2;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
 
-</connectionStrings>
+	</connectionStrings>
 </configuration>
