--- a/QuanLyPhongTro/packages.config
+++ b/QuanLyPhongTro/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="net48" />
   <package id="System.Configuration.Abstractions" version="2.0.2.45" targetFramework="net48" />
