--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -6,7 +6,7 @@
 	<connectionStrings>
 
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=DOHHY\SQLEXPRESS01;Initial Catalog=QL_ChungCu_29_10_2024_2;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=TRIS72\VANTRI;Initial Catalog=QL_ChungCu_29_10_2024_2;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
 </configuration>
