--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -1,12 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
 	<connectionStrings>
 
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=DESKTOP-OJ39RBQ;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=DESKTOP-OJ39RBQ;Initial Catalog=QL_ChungCu;User ID=sa;Password=123;Encrypt=False" providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
+	<appSettings>
+		<!-- Cấu hình thông tin email -->
+		<add key="SMTPServer" value="smtp.gmail.com" />
+		<add key="SMTPPort" value="587" />
+		<add key="EmailSender" value="ih6bmt@gmail.com" />
+		<add key="EmailPassword" value="ckyb hvai gecf xqzt" />
+	</appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
