--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -7,6 +7,7 @@
 
 
 	<add name="QuanLyPhongTro" connectionString="Data Source=DESKTOP-OJ39RBQ;Initial Catalog=QL_ChungCu;User ID=sa;Password=123;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="imagesPath" connectionString="D:\testDoAn" providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
 	<appSettings>
