--- a/QuanLyPhongTro/packages.config
+++ b/QuanLyPhongTro/packages.config
@@ -9,7 +9,7 @@
   <package id="itext7" version="9.0.0" targetFramework="net48" />
   <package id="itext7.bouncy-castle-adapter" version="9.0.0" targetFramework="net48" />
   <package id="itext7.bouncy-castle-fips-adapter" version="9.0.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net48" />
@@ -23,9 +23,13 @@
   <package id="System.Configuration.Abstractions" version="2.0.2.45" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http.Json" version="9.0.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
