--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -5,7 +5,7 @@
 	</startup>
 	<connectionStrings>
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=DESKTOP-V02CV1A\SQLEXPRESS;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=TRIS72\VANTRI;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
   <add name="imagesPath" connectionString="E:\Da_Web\Apartment_Management_Web\Apartment_Management_Web_GUI\wwwroot\images\ChuKy" providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
