--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -5,7 +5,7 @@
 	</startup>
 	<connectionStrings>
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=DESKTOP-OJ39RBQ;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=TRIS72\VANTRI;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
   <add name="imagesPath" connectionString="C:\Users\ih6bm\OneDrive\Máy tính\doanchuyenhnganh\QuanLyPhongTro\QuanLyPhongTro\AnhChuKy" providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
