--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -7,7 +7,7 @@
 
 
 	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
-  <add name="imagesPath" connectionString="C:\Users\ih6bm\OneDrive\Máy tính\doanchuyenhnganh\QuanLyPhongTro\QuanLyPhongTro\AnhChuKy" providerName="System.Data.SqlClient" />
+  <add name="imagesPath" connectionString="E:\Z0712\DA_Win\QuanLyPhongTro\QuanLyPhongTro\Images\AnhChuKy" providerName="System.Data.SqlClient" />
 
 
 	</connectionStrings>
