--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -6,8 +6,8 @@
 	<connectionStrings>
 
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
-  <add name="imagesPath" connectionString="C:\Users\ih6bm\OneDrive\Máy tính\8_12_24\QuanLyPhongTro\QuanLyPhongTro\Images\AnhChuKy" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=171.240.177.222,1433;Initial Catalog=QL_ChungCu;User ID=sa;Password=123;Encrypt=False" providerName="System.Data.SqlClient" />
+  <add name="imagesPath" connectionString="G:\.shortcut-targets-by-id\1-LeuIZUqZLhwtSmYi5FuCzR-vKNTMq3e\ChuKy" providerName="System.Data.SqlClient" />
 
 
 	</connectionStrings>
