Cập nhật config

--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -6,7 +6,7 @@
 	<connectionStrings>
 
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;User ID=sa;Password=123;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;User ID=sa;Password=16092003;Encrypt=False" providerName="System.Data.SqlClient" />
   <add name="imagesPath" connectionString="C:\Users\ih6bm\OneDrive\Máy tính\9_12_24\QuanLyPhongTro\QuanLyPhongTro\Images\AnhChuKy" providerName="System.Data.SqlClient" />
 
 
