--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -6,7 +6,7 @@
 	<connectionStrings>
 
 
-	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;User ID=sa;Password=16092003;Encrypt=False" providerName="System.Data.SqlClient" />
+	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;User ID=...;Password=...;Encrypt=False" providerName="System.Data.SqlClient" />
   <add name="imagesPath" connectionString="C:\Users\ih6bm\OneDrive\Máy tính\9_12_24\QuanLyPhongTro\QuanLyPhongTro\Images\AnhChuKy" providerName="System.Data.SqlClient" />
 
 
@@ -15,8 +15,8 @@
 		<!-- Cấu hình thông tin email -->
 		<add key="SMTPServer" value="smtp.gmail.com" />
 		<add key="SMTPPort" value="587" />
-		<add key="EmailSender" value="vantrihoang16092003@gmail.com" />
-		<add key="EmailPassword" value="aknt uqtu jkoe iyvd" />
+		<add key="EmailSender" value="..." />
+		<add key="EmailPassword" value="..." />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
