Update App.config & Tài liệu báo cáo/Note Fix/FixLoipackages.txt

--- a/QuanLyPhongTro/App.config
+++ b/QuanLyPhongTro/App.config
@@ -5,8 +5,8 @@
 	</startup>
 	<connectionStrings>
 
-
-	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;User ID=...;Password=...;Encrypt=False" providerName="System.Data.SqlClient" />
+		<!-- Cấu hình thông tin DB -->
+	<add name="QuanLyPhongTro" connectionString="Data Source=.;Initial Catalog=QL_ChungCu;User ID=....;Password=....;Encrypt=False" providerName="System.Data.SqlClient" />
   <add name="imagesPath" connectionString="C:\Users\ih6bm\OneDrive\Máy tính\9_12_24\QuanLyPhongTro\QuanLyPhongTro\Images\AnhChuKy" providerName="System.Data.SqlClient" />
 
 
